--- a/Nonna/wwwroot/recipes/thai-fried-pork/thai-fried-pork.yaml
+++ b/Nonna/wwwroot/recipes/thai-fried-pork/thai-fried-pork.yaml
@@ -34,4 +34,4 @@ Notes:
 Tags:
   - Asiatiskt
   - Kött
-image: f0d0db95-4c35-4424-b92c-a41e27758152.jpg
+Image: f0d0db95-4c35-4424-b92c-a41e27758152.jpg
