--- a/Nonna/wwwroot/recipes/thai-fried-pork/thai-fried-pork.yaml
+++ b/Nonna/wwwroot/recipes/thai-fried-pork/thai-fried-pork.yaml
@@ -1,4 +1,4 @@
-Title: Friterad fläsksida med jaew (thailändsk dippsås)
+Title: Friterad fläsksida med Jaew
 Description: Om du gillar friterat och fläsksida så MÅSTE du testa detta. Ett snabbt och enkelt sätt att laga fläsksida på som i många andra fall kräver mycket tid och jobb för att bli mört. Dippsåsen till är salt, syrlig, örtig med mycket chili. Går såklart att anpassa chilihettan efter eget tycke. Det viktigaste är att låta fläsket svalna ordentligt mellan friteringarna annars finns risken att det blir torrt. Kan serveras som en varmrätt med grönsaker och ris eller sopp en snacks och dipp bricka. Ljus lager, gärna nån thaivariant är otroligt gott till. Receptet är för fyra portioner.
 IngredientSections:
   - Title: Fläsk
@@ -20,18 +20,18 @@ IngredientSections:
       - 1,5 lime (juicen)
       - 0,5 dl fisksås av lite bättre kvalitet. (tex mega chef, red boat)
 StepSections:
-  - Title: Steg
+  - Title: Friterad fläsksida
     Steps:
       - Blanda palmsocker, fisksås och vitpeppar till fläsksidan.
       - Skär bort svålen på fläsksidan. Dela i "remsor" och skär sen ca 1-1,5 cm tjocka bitar. Lägg ner i marinaden och blanda runt tills fisksåsen sugits upp av fläsket. Låt stå åtminstone 20 min.
       - Häll rismjölet rätt ner i bunken och blanda runt så det täcker överallt.
       - Fritera fläsket på 140 grader i ca 2 min. Viktigt att det inte fåt färg eller friteras för länge för då blir det torrt. Fläsket ska vara blekt och lite sladdrigt när man tar upp det. Lägg ut på galler för att svalna i MINST 30 min.
-      - Bland ihop dippsåsen. Rör runt lite då och då så sockret löser upp sig.
       - Fritera fläsket andra gången när det är dags att äta. Höj då temperaturen på oljan till 180 grader och fritera tills fläsket är gyllenbrunt och krispigt. Lägg i en bunke med lite papper under för att droppa av lite och häll sen upp på serveringsfat.
       - Servera med dippsåsen, side grönsaker och sticky rice. En ljus lager är också kanon till om man gillar det.
+  - Title: Jaew
+    Steps:
+      - Bland ihop dippsåsen. Rör runt lite då och då så sockret löser upp sig.
+  
 Notes:
   - Jag har ännu inte hunnit filma hur jag lagar sticky här så här kommer en snabb beskrivning. Skölj riset i en bunke tills vattnet inte längre är grumligt (4-5 gånger). Sila av vattnet och häll på kokande vatten så det täcker gott och väl. Låt stå 10 min. Sila av och lägg i en ångkorg eller sil, lägg på lock och ånga i 20 min. Flippa upp och lägg över i en bunke med lock om du inte ska servera det direkt. (för att det inte ska torka)
-Tags:
-  - Asiatiskt
-  - Kött
 Image: f0d0db95-4c35-4424-b92c-a41e27758152.jpg
