--- a/Nonna/wwwroot/recipes/thai-fried-pork/thai-fried-pork.yaml
+++ b/Nonna/wwwroot/recipes/thai-fried-pork/thai-fried-pork.yaml
@@ -1,7 +1,7 @@
 Title: Friterad fläsksida med Jaew
 Description: Om du gillar friterat och fläsksida så MÅSTE du testa detta. Ett snabbt och enkelt sätt att laga fläsksida på som i många andra fall kräver mycket tid och jobb för att bli mört. Dippsåsen till är salt, syrlig, örtig med mycket chili. Går såklart att anpassa chilihettan efter eget tycke. Det viktigaste är att låta fläsket svalna ordentligt mellan friteringarna annars finns risken att det blir torrt. Kan serveras som en varmrätt med grönsaker och ris eller sopp en snacks och dipp bricka. Ljus lager, gärna nån thaivariant är otroligt gott till. Receptet är för fyra portioner.
 IngredientSections:
-  - Title: Fläsk
+  - Title: Friterad fläsksida
     Ingredients:
       - ca 800 g färsk rå fläsksida (ej rimmat sidfläsk)
       - 2 msk fisksås
