--- a/Nonna/wwwroot/recipes/moo-ping/moo-ping.yaml
+++ b/Nonna/wwwroot/recipes/moo-ping/moo-ping.yaml
@@ -1,7 +1,7 @@
 Title: "Moo ping - thailändska grillspett"
 Description: ""
 IngredientSections:
-  - Title: "Ingredienser"
+  - Title: "Moo ping"
     Ingredients:
       - "1 kg fläskkarré"
       - "6 vitlöksklyftor"
@@ -17,7 +17,7 @@ IngredientSections:
       - "1,5 dl kokosmjölk"
       - "Grillspett i metall"
 StepSections:
-  - Title: "Steg"
+  - Title: "Moo ping"
     Steps:
       - "Börja med fläskkarrén som behöver frysas innan den kan skäras..."
       - "Blanda finskuren gul lök, korianderrötter, riven vitlök, ingefära, fisksås, ostronsås, soja, palmsocker, vitpeppar, svartpeppar."
