Styling and fonts

--- a/Nonna/Nonna.Web.csproj
+++ b/Nonna/Nonna.Web.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\css\app.css">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
