--- a/Nonna/wwwroot/recipes/tartare-balzac/tartare-balzac.yaml
+++ b/Nonna/wwwroot/recipes/tartare-balzac/tartare-balzac.yaml
@@ -1,5 +1,5 @@
 Title: "Tartare Balzac"
-Description: "Råbiff från Brasserie Balzac"
+Description: "Råbiff från Brasserie Balzac. Recept av Bryan Conejeros Cabrera."
 IngredientSections:
   - Title: "Råbiff"
     Ingredients:
