--- a/Nonna/wwwroot/recipes/leverpastej/leverpastej.yaml
+++ b/Nonna/wwwroot/recipes/leverpastej/leverpastej.yaml
@@ -26,4 +26,5 @@ StepSections:
       - "Ställ in i vattenbad i ugnen och sätt ugnen på 225 grader"
       - "Baka i ca 1 1/2 timme"
 Notes:
+  - "Ugnen ska alltså vara kall när pastejen ställs in"
 Image: "ea113c97-c506-4d5e-a90c-a9f22a955369.jpg"
